5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1621_2922.log
== TEST (2019-04-01 18:21:36) 
-- CODE:
qf = float(input())
i = (gf/q**(1/t))-1
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (gf/q**(1/t))-1
NameError: name 'gf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:21:50) 
-- CODE:
q = float(input())
i = (gf/q**(1/t))-1
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (gf/q**(1/t))-1
NameError: name 'gf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:22:19) 
-- CODE:
q = float(input())
i = gf/q**(1/t)-1
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = gf/q**(1/t)-1
NameError: name 'gf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:22:21) 
-- CODE:
q = float(input())
i = gf/q**(1/t)-1
print(round(i,5))
-- EXECUTION TIME:
0.169986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = gf/q**(1/t)-1
NameError: name 'gf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:22:22) 
-- CODE:
q = float(input())
i = gf/q**(1/t)-1
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = gf/q**(1/t)-1
NameError: name 'gf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:23:09) 
-- CODE:
q = float(input())
i = (gf/q**(1/t))-1
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (gf/q**(1/t))-1
NameError: name 'gf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:24:09) 
-- CODE:
q = float(input())
qf = float(input())
i = (gf/q**(1/t))-1
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:24:10) 
-- CODE:
q = float(input())
qf = float(input())
i = (gf/q**(1/t))-1
print(round(i,5))
-- EXECUTION TIME:
0.129782
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:24:11) 
-- CODE:
q = float(input())
qf = float(input())
i = (gf/q**(1/t))-1
print(round(i,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:25:03) 
-- CODE:
q = float(input())
qf = float(input())
i = (gf/q**(1/t))-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:25:05) 
-- CODE:
q = float(input())
qf = float(input())
i = (gf/q**(1/t))-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:25:05) 
-- CODE:
q = float(input())
qf = float(input())
i = (gf/q**(1/t))-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.122375
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:25:06) 
-- CODE:
q = float(input())
qf = float(input())
i = (gf/q**(1/t))-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:25:56) 
-- CODE:
q = float(input())
qf = float(input())
i = (gf/q**(1/t))-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:02) 
-- CODE:
t = float(input())
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:03) 
-- CODE:
t = float(input())
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:33) 
-- CODE:
t = float(input())
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:28:35) 
-- CODE:
t = float(input())
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.112608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:35) 
-- CODE:
t = float(input())
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:36) 
-- CODE:
t = float(input())
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:36) 
-- CODE:
t = float(input())
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:48) 
-- CODE:
t = float(input())
i = qf/q**t-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = qf/q**t-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:49) 
-- CODE:
t = float(input())
i = qf/q**t-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = qf/q**t-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:29:50) 
-- CODE:
t = float(input())
gf = float(input())
q = float(input())
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:29:51) 
-- CODE:
t = float(input())
gf = float(input())
q = float(input())
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:19) 
-- CODE:
t = float()
gf = float()
q = float()
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:30) 
-- CODE:
t = float()
gf = float()
q = float()
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:40) 
-- CODE:
t = float()
gf = float()
q = float()
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:41) 
-- CODE:
t = float()
gf = float()
q = float()
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:56) 
-- CODE:
t = float(input())
gf = float()
q = float()
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:58) 
-- CODE:
t = float(input())
gf = float()
q = float()
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:59) 
-- CODE:
t = float(input())
gf = float()
q = float()
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:31:40) 
-- CODE:
t = float(input("tempo de investimento: "))
gf = float()
q = float()
i = ((qf/q)**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = ((qf/q)**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:31:56) 
-- CODE:
t = float(input("tempo de investimento: "))
gf = float()
q = float()
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:32:34) 
-- CODE:
t = float(input("tempo de investimento: "))
gf = float(input())
q = float(input())
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:33:26) 
-- CODE:
t = int(input("tempo de investimento: "))
gf = float(input())
q = float(input())
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:33:45) 
-- CODE:
t = int(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:35:37) 
-- CODE:
t = int(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:35:39) 
-- CODE:
t = int(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:35:40) 
-- CODE:
t = int(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.15255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:35:41) 
-- CODE:
t = int(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.159181
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:35:41) 
-- CODE:
t = int(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.159186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:36:16) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:36:18) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.146013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:36:18) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.157308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:36:18) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.194673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:36:19) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.410688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:36:19) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.0893838
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1621/2922/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:36:21) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.312275
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:36:21) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.146668
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:36:36) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**t)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.192512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**t)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:02) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf**t)/q-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf**t)/q-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:37:04) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf**t)/q-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.131248
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf**t)/q-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:37:05) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf**t)/q-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.291319
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf**t)/q-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:37:05) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf**t)/q-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.160632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf**t)/q-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:37) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf**(1/y))/q-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf**(1/y))/q-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:37:39) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf**(1/y))/q-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.197042
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf**(1/y))/q-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:48) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**(1/y))-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**(1/y))-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:37:50) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**(1/y))-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.213725
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**(1/y))-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:37:51) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**(1/y))-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.113511
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**(1/y))-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:37:51) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**(1/y))-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.111682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**(1/y))-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:37:51) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**(1/y))-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.177254
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1621/2922/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:16) 
-- CODE:
t = float(input("tempo de investimento: "))
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.138081
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = qf/q**(1/y)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:22) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q)**(1/y)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:24) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.172374
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q)**(1/y)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:25) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.177164
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q)**(1/y)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:26) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.13664
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q)**(1/y)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:26) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q)**(1/y)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:26) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.212719
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1621/2922/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:26) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.234281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q)**(1/y)-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:50) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:51) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.14857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:52) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.12514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:52) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:53) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.241768
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:53) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.327486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:53) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.172293
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1621/2922/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:34) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:39:36) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.166182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:37) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:25) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:26) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:26) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.141401
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:40) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.129438
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:43) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.14653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:43) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.173954
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:44) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.338165
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1621/2922/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:44) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.260213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:54) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.192661
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:54) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = (qf/q)**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:41:18) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.155384
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:19) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input())
q = float(input())
y = int(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:41:51) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input(2))
q = float(input(3))
y = float(input(4))
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.147991
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    qf = float(input(2))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:52) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input(2))
q = float(input(3))
y = float(input(4))
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input(2))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:53) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input(2))
q = float(input(3))
y = float(input(4))
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input(2))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:53) 
-- CODE:
t = float(input("tempo de investimento: "))
qf = float(input(2))
q = float(input(3))
y = float(input(4))
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qf = float(input(2))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:13) 
-- CODE:
t = float(input("tempo de investimento: "))
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = qf/q**(1/y)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:44:42) 
-- CODE:
t = float(input("tempo de investimento: "))
gf = float(input(round(1,6)))
q = float(input(round(1,3)))
y = float(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gf = float(input(round(1,6)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:44:44) 
-- CODE:
t = float(input("tempo de investimento: "))
gf = float(input(round(1,6)))
q = float(input(round(1,3)))
y = float(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.161861
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    gf = float(input(round(1,6)))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:44:44) 
-- CODE:
t = float(input("tempo de investimento: "))
gf = float(input(round(1,6)))
q = float(input(round(1,3)))
y = float(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gf = float(input(round(1,6)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:44:44) 
-- CODE:
t = float(input("tempo de investimento: "))
gf = float(input(round(1,6)))
q = float(input(round(1,3)))
y = float(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gf = float(input(round(1,6)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:44:44) 
-- CODE:
t = float(input("tempo de investimento: "))
gf = float(input(round(1,6)))
q = float(input(round(1,3)))
y = float(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gf = float(input(round(1,6)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:44:44) 
-- CODE:
t = float(input("tempo de investimento: "))
gf = float(input(round(1,6)))
q = float(input(round(1,3)))
y = float(input())
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gf = float(input(round(1,6)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:13) 
-- CODE:
t = float(input("tempo de investimento: "))
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = qf/q**(1/y)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:15) 
-- CODE:
t = float(input("tempo de investimento: "))
i = qf/q**(1/y)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = qf/q**(1/y)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:55) 
-- CODE:
t = float(input("tempo de investimento: "))
i = 1,42/1,5**(1/t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(float(round(i,5)))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:46:31) 
-- CODE:
t = float(input("tempo de investimento: "))
i = qf/q**(1/t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = qf/q**(1/t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:08) 
-- CODE:
t = float(input("tempo de investimento: "))
i = qf/q**(1/t)-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = qf/q**(1/t)-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:51) 
-- CODE:
t = float(input("tempo de investimento: "))
i = 1042000/1500**(1/t)-1
print(float(round(i,5)))
-- OUTPUT:
960676.93547
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:43) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**(1/t))-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**(1/t))-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:46) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**(1/t))-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.131039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2922/main.py", line 2, in <module>
    i = (qf/q**(1/t))-1
NameError: name 'qf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:46) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**(1/t))-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**(1/t))-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:06) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1042000/1500**(1/t))-1
print(float(round(i,5)))
-- OUTPUT:
960676.93547
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:26) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (qf/q**(1/t))-1
print(float(round(i,5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = (qf/q**(1/t))-1
NameError: name 'qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:48) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (32/3**(1/t))-1
print(float(round(i,5)))
-- OUTPUT:
30.61176
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:22) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1042000/1500**(1/t))-1
print(float(round(i,5)))
-- OUTPUT:
960676.93547
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:53) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1.42/1.5**(1/t))-1
print(float(round(i,5)))
-- OUTPUT:
0.41362
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:06) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1.042/1.5**(1/t))-1
print(float(round(i,5)))
-- OUTPUT:
0.03732
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:14) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1.042/1.5**(1/t))-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.111017
-- TEST CASE 1:
---- input:
90
---- correct output:
0.07541
---- user output:
0.03732
-- TEST CASE 2:
---- input:
99
---- correct output:
0.06833
---- user output:
0.03774
-- TEST CASE 3:
---- input:
121
---- correct output:
0.05557
---- user output:
0.03851
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:27) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1.042/1.5**(1/t))-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.149496
-- TEST CASE 1:
---- input:
90
---- correct output:
0.07541
---- user output:
0.03732
-- TEST CASE 2:
---- input:
99
---- correct output:
0.06833
---- user output:
0.03774
-- TEST CASE 3:
---- input:
121
---- correct output:
0.05557
---- user output:
0.03851
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:29) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1.042/1.5**(1/t))-1
print(float(round(i,5)))
-- OUTPUT:
0.03732
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:43) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1.042/1.5**(1/t))-1
print(float(round(i,5)))
-- EXECUTION TIME:
0.170721
-- TEST CASE 1:
---- input:
90
---- correct output:
0.07541
---- user output:
0.03732
-- TEST CASE 2:
---- input:
99
---- correct output:
0.06833
---- user output:
0.03774
-- TEST CASE 3:
---- input:
121
---- correct output:
0.05557
---- user output:
0.03851
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:56) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1.042/1.5**(1/t))-1
print(float(round(i,5)))
-- OUTPUT:
0.03732
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:56) 
-- CODE:
t = float(input("tempo de investimento: "))
i = (1.042/1.5**(1/t))-1
print(float(round(i,5)))
-- OUTPUT:
0.03732
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:10) 
-- CODE:
t = float(input("tempo de investimento: "))
i = ((1.042/1.5)**(1/t))-1
print(float(round(i,5)))
-- OUTPUT:
-0.00404
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:28) 
-- CODE:
t = float(input("tempo de investimento: "))
i = 1.042/1.5**(1/t)-1
print(float(round(i,5)))
-- OUTPUT:
0.03732
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:34) 
-- CODE:
t = float(input("tempo de investimento: "))
i = round(1.042/1.5**(1/t)-1,5)
print(float(round(i,5)))
-- OUTPUT:
0.03732
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:55:02) 
-- CODE:
t = float(input("tempo de investimento: "))
i = round((1.042/1.5**(1/t))-1,5)
print(float(round(i,5)))
-- OUTPUT:
0.03732
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
